--- a/UAAASSCM/UAAASSCM.csproj
+++ b/UAAASSCM/UAAASSCM.csproj
@@ -1365,6 +1365,7 @@
     <Content Include="Views\Admin\_CollegeWiseApprovedReport.cshtml" />
     <Content Include="Views\Admin\CollegewiseDetailsReset.cshtml" />
     <Content Include="Views\CollegeSCMProceedingsRequest\__NotApproveFacultyAss.cshtml" />
+    <Content Include="Views\Admin\SampleData.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
